Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/invalidStruct2.ru
/? id de struct invalido, termina con _, salida: id invalido
Perro_